ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: umend-k8s
spec: {}
status: {}
