service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: umendlb
  name: umendlb
  namespace: umend-app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: umend-new1
  type: ClusterIP
status:
  loadBalancer: {}
